# Kimi

./: .deploy-trigger  .env.example  .gitignore  README.md  SETUP.md  package-lock.json  package.json  pnpm-lock.yaml  render.yaml
.github/workflows/: ci.yml  refresh-stats.yml  weekly-sync.yml
backend/: .env.example  Dockerfile  README_BACKEND.md  index.js  kill_predictor_model.pkl  model_infer.py  player_stats.csv  pyproject.toml  requirements.txt  scraper.py  train_model.py  training_data.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py  pipelines.py  schemas.py  security.py  services.py
backend/model_api/: main.py
backend/sql/: 002_settle_prop_line.sql  003_deduct_credits.sql  schema.sql
frontend/: .gitignore  components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/components/: Auth.tsx  AuthDialog.tsx  BetSlip.tsx  Header.tsx  MatchCard.tsx  PlayerPropRow.tsx
frontend/src/lib/: api.ts  auth.ts  (+1 more)
ml/: README.md  generate_projections.py  ingest_schedule.py  ingest_stats.py  requirements.txt  settle_matches.py  sync_matches.py  train_model.py  update_match_statuses.py
ml/data/: match_stats.csv
prisma/: schema.prisma
scripts/: projections_cron.sh
supabase/migrations/: 000_full_setup.sql  001_initial_schema.sql  002_profiles_and_rls.sql  003_kimi_core_schema.sql  004_rpc_functions.sql  005_rls_policies.sql  006_add_call_of_duty.sql  007_pandascore_ids.sql  008_fix_starting_balance.sql  009_scoped_prop_types.sql  010_payout_security.sql  011_clerk_auth_migration.sql
(+13 files in other folders)
