[project]
name = "valorant-props-backend"
version = "0.1.3"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "passlib[bcrypt]>=1.7.4",
  "httpx>=0.27.0"
]
